# github-lib-template

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  pyproject.toml
.github/workflows/: commit-lint.yml  contributors.yml  discord-issue.yml  discord-pr.yml  docker-push.yml  docs-formatter.yml  post-to-discord.yml  post-to-facebook.yml  post-to-twitter.yml  publish-to-pypi.yml  release.yml  tests.yml  wiki.yml
docs/: Badges.md
pythonuef_github_lib_template/: __init__.py
tests/: test_country.py
