[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonuef-github-lib-template"
version = "0.1.0"
description = "github lib template"
authors = [{name = "pythonuef"}]
license = {text = "MIT"}
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
